--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.1",
+    "morgan": "^1.10.0",
     "uuid4": "^2.0.3"
   }
 }
