--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
+    "mongoose-slug-plugin": "^2.1.0",
     "morgan": "^1.10.0",
     "uuid4": "^2.0.3"
   }
