--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.8.1",
     "mongoose-slug-plugin": "^2.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "uuid4": "^2.0.3"
   }
 }
